# Mango

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  ast.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  core.h  debug.c  debug.h  enums.txt  error.cpp  error.hpp  eval.cpp  eval.hpp  example.m  example.mg  expression.cpp  expression.hpp  function.h  generator.cpp  generator.h  grammar.bnf  grammar.h  grammar.mg  grammar_cpp_gen.cpp  grammar_cpp_gen.h  grammar_extra.mg  interpreter.cpp  interpreter.h  interpreter.hpp  lexer.cpp  lexer.h  lexer.hpp  main.c  main.cpp  (+36 more)
abstract_syntax_tree/: expr_node.h
core/: grammar.h
generator/: generator_parser.cpp  generator_parser.h  grammar  grammar.bkup  grammar.mg  grammar.orig  grammar_cpp_gen.cpp  grammar_cpp_gen.h  info  info.txt  test
generator/python/: NODE_TEMPLATE  input  (+11 more)
interpreter/: interpreter.cpp  interpreter.h  scope.h  state.h
lex/: mglex.cpp  mglex.h
lexer/: mglexer.cpp  mglexer.h
parse_tree/: expr.cpp  expr.h  node.h
parser/: mgparser.cpp  mgparser.h  parser.cpp  parser.h
parsing/: lexer.cpp  lexer.h  parse_table.h  parser.cpp  parser.h
src/: README.md  ast.rs  chunk.rs  class.rs  compiler.rs  constant.rs  core.rs  debug.rs  distance.rs  error.rs  function.rs  lexer.rs  local.rs  main.rs  managed.rs  memory.rs  module.rs  old  parse_tree.rs  parser.rs  scanner.rs  semantic_analyzer.rs  token.rs  tokens.rs  vm.rs
sys/: grammar.mg  keywords.cpp  keywords.h
tokens/: tokens.cpp  tokens.h
tree/: tree.h
utilities/: generator.cpp  generator.h
utils/: generator.cpp  generator.h
(+37 files in other folders)
